--- a/package.json
+++ b/package.json
@@ -18,7 +18,14 @@
   },
   "homepage": "https://github.com/kly001/webauth-iii-challenge#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "knex": "^0.20.4"
+    "jsonwebtoken": "^8.5.1",
+    "knex": "^0.20.4",
+    "sqlite3": "^4.1.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
